libraries/ckit/regression/valid-programs/a12.c
main () {
  void *i;
  int *j;
  j == i;
}
