libraries/ckit/regression/invalid-programs/r13.c
main () {
  float d;
  int *i;
  i = i + d;
}
